src/snapshots/hello_mlir__parser__tests__parse_top_level_if_statement_should_fail.snap
---
source: src/parser.rs
expression: "format!(\"{:?}\", errors)"
---
"[found 'If' at 0..2 expected 'FunctionDeclaration', or end of input]"
