src/snapshots/hello_mlir__parser__tests__parse_top_level_let_declaration_should_fail.snap
---
source: src/parser.rs
expression: "format!(\"{:?}\", errors)"
---
"[found 'LetDeclaration' at 0..3 expected 'FunctionDeclaration', or end of input]"
