src/snapshots/hello_mlir__parser__tests__parse_typed_float_literal_f32.snap
---
source: src/parser.rs
expression: program
---
functions:
  - name: test
    params: []
    type: F32
    body:
      - Expr:
          expr:
            FloatLit:
              value: "3.14"
              span:
                start: 19
                end: 27
                context: ~
              type: F32
          span:
            start: 19
            end: 27
            context: ~
    span:
      start: 0
      end: 29
      context: ~
