src/snapshots/hello_mlir__parser__tests__parse_typed_float_literal_f64.snap
---
source: src/parser.rs
expression: program
---
functions:
  - name: test
    params: []
    type: F64
    body:
      - Expr:
          expr:
            FloatLit:
              value: "2.71828"
              span:
                start: 19
                end: 30
                context: ~
              type: F64
          span:
            start: 19
            end: 30
            context: ~
    span:
      start: 0
      end: 32
      context: ~
