src/snapshots/hello_mlir__parser__tests__parse_typed_integer_literal_i32.snap
---
source: src/parser.rs
expression: program
---
functions:
  - name: test
    params: []
    type: I32
    body:
      - Expr:
          expr:
            IntLit:
              value: "42"
              span:
                start: 19
                end: 25
                context: ~
              type: I32
          span:
            start: 19
            end: 25
            context: ~
    span:
      start: 0
      end: 27
      context: ~
