src/snapshots/hello_mlir__parser__tests__parse_unary_expression.snap
---
source: src/parser.rs
expression: program
---
functions:
  - name: test
    params: []
    type: I32
    body:
      - Expr:
          expr:
            UnaryOp:
              op: Neg
              expr:
                IntLit:
                  value: 42
                  span:
                    start: 20
                    end: 22
                    context: ~
              span:
                start: 19
                end: 22
                context: ~
          span:
            start: 19
            end: 22
            context: ~
    span:
      start: 0
      end: 24
      context: ~
