src/snapshots/hello_mlir__parser__tests__parse_variable_declaration.snap
---
source: src/parser.rs
expression: program
---
functions:
  - name: test
    params: []
    type: I32
    body:
      - LetDecl:
          name: x
          type: I32
          value:
            IntLit:
              value: "42"
              span:
                start: 32
                end: 34
                context: ~
              type: ~
          span:
            start: 19
            end: 35
            context: ~
      - Expr:
          expr:
            VarRef:
              name: x
              span:
                start: 36
                end: 37
                context: ~
          span:
            start: 36
            end: 37
            context: ~
    span:
      start: 0
      end: 39
      context: ~
