src/snapshots/hello_mlir__parser__tests__parse_variable_declaration_without_type.snap
---
source: src/parser.rs
expression: program
---
functions:
  - name: test
    params: []
    type: I32
    body:
      - LetDecl:
          name: x
          type: ~
          value:
            IntLit:
              value: "42"
              span:
                start: 27
                end: 29
                context: ~
              type: ~
          span:
            start: 19
            end: 30
            context: ~
      - Expr:
          expr:
            VarRef:
              name: x
              type: ~
              span:
                start: 31
                end: 32
                context: ~
          span:
            start: 31
            end: 32
            context: ~
    span:
      start: 0
      end: 34
      context: ~
