src/snapshots/hello_mlir__parser__tests__parse_variable_declaration_without_value.snap
---
source: src/parser.rs
expression: program
---
functions:
  - name: test
    params: []
    type: I32
    body:
      - LetDecl:
          name: x
          type: I32
          value: ~
          span:
            start: 19
            end: 30
            context: ~
      - Expr:
          expr:
            IntLit:
              value: 42
              span:
                start: 31
                end: 33
                context: ~
          span:
            start: 31
            end: 33
            context: ~
    span:
      start: 0
      end: 35
      context: ~
